fixed scroller and truncate icon

--- a/src/components/mainFeed/MainFeed.css
+++ b/src/components/mainFeed/MainFeed.css
@@ -1,6 +1,10 @@
 .ReactModalPortal .ReactModal__Overlay.ReactModal__Overlay--after-open {
     background-color: unset !important;
   }
+
+.mainFeed{
+    margin-right: 1%;
+}
 .mainFeed__header{
     display: flex;
     justify-content: space-between;
